# ROS2Mapper

./: README.md  codecov.yml  definitionofdone.md
.github/workflows/: build.yml  lint_and_compile.yml  main.yml  pylint.yml
Diaries/: juho.md  leevi.md  sami.txt
Documentation/: commands.md  definition-of-done.md  definitionofdone.md  timesheet.md  tutorials.md
Documentation/Diaries/: oskari.md
documentation/: api-documentation.md  architecture.md  commands.md  definition-of-done.md  installation.md  timesheet.md  tutorials.md
documentation/diaries/: juho.md  kosti.md  leevi.md  oskari.md  sami.md
launch-scripts/: gazebo_autonomus_exploration_launch.sh  gazebo_camera_launch.sh  remote_autonomus_exploration_launch.sh
models/qr_code/: model.config  model.sdf
models/qr_code_1/: model.config  model.sdf
models/qr_code_2/: model.config  model.sdf
models/qr_code_3/: model.config  model.sdf
models/qr_code_4/: model.config  model.sdf
models/qr_code_5/: model.config  model.sdf
models/test_world_1/: test_world_1.world
workspace/: .coveragerc  .gitignore  .pylintrc  lint.sh  pytest.ini  requirements.txt  run.sh  test.sh
workspace/launch/: gazebo_launch.py  (+10 more)
workspace/src/qr_code_reader/: README.md  package.xml  setup.cfg  setup.py
workspace/src/qr_code_reader/qr_code_reader/: math.py  qr_code_reader.py
workspace/src/qr_code_reader/test/: qr_code_node_test.py
workspace/src/ros2_mapper_memory_node/: .gitignore  package.xml  setup.py
workspace/src/ros2_mapper_memory_node/ros2_mapper_memory_node/submodules/: data_repository.py
workspace/src/ros2_mapper_memory_node/test/: memory_node_test.py
(+86 files in other folders)
