<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_mapper_memory_node</name>
    <version>0.0.0</version>
    <description>Manages saving the QR codes</description>
    <maintainer email="48809753+Le36@users.noreply.github.com">leevi</maintainer>
    <license>MIT</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>